# PCM-Setup-Example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
result/: is_even.csv
src/algorithm/: codegenIsEven.h  isEven.h  isEvenCodegen.py
src/benchmark/: IsEvenBench.cpp  pcm.h  working.cpp
